--- a/webapp/src/app/views/idea-view/idea-view.component.scss
+++ b/webapp/src/app/views/idea-view/idea-view.component.scss
@@ -68,10 +68,8 @@
                 }
             }
 
-            // app-support-requests {
-            //   display: block;
-            //   width: 100%;
-            // }
+            app-external-links { margin-top: -6px; }
+
         }
 
         #content {
